crates/specta-zod/src/snapshots/specta_zod__zod__tests__simple_enum.snap
---
source: crates/specta-zod/src/zod.rs
expression: output
---
export const simpleEnumSchema = z.enum(["One", "Two", "Three"]);
export type SimpleEnum = z.infer<typeof simpleEnumSchema>;
