crates/specta-zod/src/snapshots/specta_zod__zod__tests__with_reference.snap
---
source: crates/specta-zod/src/zod.rs
expression: output
---
export const simpleStructSchema = z.object({
  name: z.string(),
  age: z.number(),
  active: z.boolean(),
});
export type SimpleStruct = z.infer<typeof simpleStructSchema>;

export const withReferenceSchema = z.object({
  simple: simpleStructSchema,
});
export type WithReference = z.infer<typeof withReferenceSchema>;
